--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,13 +7,13 @@
 
 @layer base{
     body {
-        @apply bg-black text-white dark:text-black 
+        @apply bg-black text-white dark:text-white 
     }
     h1 {
-        @apply bg-black text-white dark:text-black text-2xl
+        @apply bg-black text-white dark:text-white text-2xl
     }
     h2 {
-        @apply bg-black text-white dark:text-black text-xl
+        @apply bg-black text-white dark:text-white text-xl
     }
 }
 
