--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,10 +9,10 @@
         @apply bg-white text-black dark:bg-black text-gray-200;  /* Applying off-white color in both light and dark themes */
     }
     h1 {
-        @apply bg-black text-white dark:text-white text-2xl;  /* h1 remains bright white for contrast */
+        @apply bg-white text-black dark:bg-black text-gray-200 text-2xl;  /* h1 remains bright white for contrast */
     }
     h2 {
-        @apply bg-black text-gray-900 dark:text-gray-200 text-xl;  /* Applying off-white color to h2 as well */
+        @apply bg-white text-black dark:bg-black text-gray-200 text-xl;  /* Applying off-white color to h2 as well */
     }
 }
 
